--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
+    "target": "ESNext",
+    "module": "NodeNext",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
-    "outDir": "./dist",
+    "outDir": "./dist"
   },
-  "include": [
-    "**/**.ts"
-  ]
+  "include": ["**/**.ts"]
 }
